<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        tools:context=".UploadActivity">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:id="@+id/target_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/target_selector_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Target: " />

            <Spinner
                android:id="@+id/target_selector_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/photo_preview_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/photo_preview"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:background="#55222222"
                android:contentDescription="@string/post_photo_title"
                android:maxHeight="200dp"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/photo_preview_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/photo_preview"
                android:layout_alignTop="@+id/photo_preview"
                android:layout_alignEnd="@+id/photo_preview"
                android:layout_alignBottom="@+id/photo_preview"
                android:gravity="center"
                android:text="@string/photo_select"
                android:textColor="#ffffff" />
        </RelativeLayout>

        <EditText
            android:id="@+id/photo_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/photo_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textAlignment="center" />

        <Button
            android:id="@+id/post_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:alpha="1"
            android:text="@string/photo_post"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>